# rag_langchain

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
Data_Ingestion_Parsing/: dataingestion.ipynb  dataparsingpdf.ipynb  dataparsingword.ipynb
Data_Ingestion_Parsing/data/txt_files/: machine_intro.txt  python.intro.txt
Data_Ingestion_Parsing/data/word_files/: sample_company_revenue_report.docx
