[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
]
